--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.3",
         "ext-curl": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.4.*"
     }
 }
