--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 composer.phar
 vendor/
 .idea/
+.project
+.buildpath
+.settings/
 examples/params.json
 *~
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
